# beacon

./: .env.example  Dockerfile  README.md  alembic.ini  config.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml  forge-deploy-main.yml
app/: ai_analysis.py  analysis_routes.py  auth.py  background_tasks.py  cache.py  config.py  database.py  enums.py  error_handlers.py  frontend.py  logging_config.py  main.py  middleware.py  models.py  monitoring.py  notifications.py  orm_models.py  pulses.py  repositories.py  schemas.py  teams.py  trend_detection.py  trend_routes.py  validators.py
app/auth/: dependencies.py  middleware.py
app/routers/: dashboard.py  pulses.py  teams.py
app/services/: email_reports.py  notification_service.py  trend_detector.py
app/tasks/: scheduled_reports.py
app/templates/: dashboard.html
docs/: postman_collection.json
frontend/src/components/: Dashboard.jsx
infrastructure/: main-github-oidc.yml  main-infrastructure.yml  main-task-definition.json
tests/: conftest.py  test_api_endpoints.py  test_dashboard.py  test_database.py
